<resources>
    <string name="app_name">MyScout</string>

    <string name="app_name_meetings">MyScout - Réunions</string>
    <string name="app_name_phases">MyScout - Phases</string>
    <string name="app_name_favorite_phases">MyScout - Phases Favorites</string>
    <string name="app_meeting_edit_title">Editer une réunion</string>
    <string name="app_phase_edit_title">Editer une phase</string>

    <string name="add_element">Ajouter un élement</string>
    <string name="add_meeting">Ajouter une réunion</string>

    <string name="btn_add">Ajouter</string>
    <string name="btn_modify">Valider</string>
    <string name="btn_cancel">Annuler</string>
    <string name="delete">Supprimer</string>
    <string name="favorite">Mettre en favoris</string>

    <string name="start">Début</string>
    <string name="end">Fin</string>

    <string name="start_date_hour">Date et heure de début</string>
    <string name="end_date_hour">Date et heure de fin</string>
    <string name="start_location">Lieu de début</string>
    <string name="end_location">Lieu de fin</string>
    <string name="description_hint">Description</string>
    <string name="story_hint">Histoire</string>
    <string name="rating_description">Evaluation réunion sur 5 étoiles</string>

    <string name="add_phase">Ajouter une phase</string>
    <string name="phase_name_title">Nom de la phase : </string>
    <string name="phase_start_time_edit_title">Entrer l\'heure de début</string>
    <string name="phase_start_time_title">Heure de début : </string>
    <string name="phase_during_title">Durée : </string>
    <string name="phase_during_edit_title">Entrer la durée en minutes </string>
    <string name="phase_resume_title">Résumé : </string>
    <string name="phase_resume_edit_title">Entrer le résumé</string>
    <string name="phase_adding_photo_title">Ajouter une/des photos</string>
    <string name="phase_abort">anuler</string>
    <string name="phase_validate">valider</string>
    <string name="phase_previous_photo">précédente</string>
    <string name="phase_next_photo">suivante</string>
    <string name="phase_pick_photos">ajouter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phase_name_edit_title">Entrer le nom</string>
    <string name="pick_image_intent_text">Choisir photo</string>
</resources>