<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.meeting.phaseeditor.EditPhaseFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/phase_during_title" />

    <EditText
        android:id="@+id/phase_during"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:hint="@string/phase_during_edit_title"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/phase_resume_title" />

    <EditText
        android:id="@+id/phase_resume"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:hint="@string/phase_resume_edit_title"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/phase_adding_photo_title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageSwitcher
            android:id="@+id/phase_image_switcher"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/phase_image_switcher_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:layout_below="@id/phase_image_switcher">

            <Button
                android:id="@+id/phase_previous_photo_btn"
                android:text="@string/phase_previous_photo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:layout_below="@id/phase_image_switcher" />

            <Button
                android:id="@+id/phase_next_photo_btn"
                android:text="@string/phase_next_photo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/phase_image_switcher" />

        </LinearLayout>

        <Button
            android:id="@+id/phase_pick_photos_btn"
            android:text="@string/phase_pick_photos"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:layout_below="@id/phase_image_switcher_buttons" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/phase_abort_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:text="@string/phase_abort" />

            <Button
                android:id="@+id/phase_validate_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/phase_validate" />

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>